# bytebuild

./: .gitignore  CHANGELOG.md  bytebuild.cabal  cabal.project  small-bytearray-builder.cabal
.github/workflows/: build.yaml
bench/: Cell.hs  Main.hs  SimpleCsv.hs
cbits/: bytebuild_custom.c
common/: HexWord64.hs  Word16Tree.hs
src-9.0/: Compat.hs
src-9.2/: Compat.hs
src-checked/: Op.hs
src-unchecked/: Op.hs
src/Data/ByteArray/: Builder.hs
src/Data/ByteArray/Builder/: Bounded.hs  Small.hs  Unsafe.hs
src/Data/ByteArray/Builder/Bounded/: Unsafe.hs
src/Data/ByteArray/Builder/Small/: Bounded.hs  Unsafe.hs
src/Data/Bytes/: Builder.hs  Chunks.hs
src/Data/Bytes/Builder/: Avro.hs  Bounded.hs  Class.hs  Template.hs  Unsafe.hs
src/Data/Bytes/Builder/Bounded/: Class.hs  Unsafe.hs
test/: Main.hs
