cabal-version:       2.2
name: small-bytearray-builder
version: 0.1.0.0
-- synopsis:
-- description:
homepage: https://github.com/andrewthad/small-bytearray-builder
-- bug-reports:
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2019 Andrew Martin
category: Data
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Data.ByteArray.Builder.Small
  -- other-modules:
  -- other-extensions:
  build-depends:
      base >=4.12.0.0 && <5
    , primitive >=0.7 && <0.8
    , byteslice >=0.1 && <0.2
  ghc-options: -Wall -O2 -ddump-to-file -ddump-simpl
  hs-source-dirs: src
  default-language: Haskell2010

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
      base >=4.12.0.0 && <5
    , small-bytearray-builder
    , QuickCheck >=2.13.1 && <2.14
    , tasty-quickcheck >=0.10.1 && <0.11
    , tasty >=1.2.3 && <1.3
    , primitive
